infrastructure/ampq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ampq-statefulset
  namespace: default
  labels:
    app: ampq
spec:
  serviceName: ampq
  replicas: 1
  selector:
    matchLabels:
      app: ampq
  template:
    metadata:
      labels:
        app: ampq
    spec:
      containers:
        - name: ampq
          image: vromero/activemq-artemis:2.16.0-alpine
          ports:
            - containerPort: 5672
              name: ampq
            - containerPort: 61616
              name: ampq-core
            - containerPort: 8161
              name: ampq-server
      volumes:
        - name: pv-data
          persistentVolumeClaim:
            claimName: ampq-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: ampq-service
  namespace: default
  labels:
    app: ampq
spec:
  ports:
    - port: 5672
      name: ampq
      protocol: TCP
    - port: 61616
      name: ampq-core
      protocol: TCP
    - port: 8161
      name: ampq-server
  type: NodePort
  selector:
    app: ampq
